# rAVen

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  fft.c  init.sh  main.c  staticompile.sh
.config/easC/: config.json
.github/workflows/: codeql.yml
CHANGELOG/: v0.0.1-a.1.md  v0.0.2-a.1.md
lib/: libraven.c  libraven.h  recompile.sh  test.sh
src/: main.c
